--- a/app/src/main/res/layout/anadirmedicamentos.xml
+++ b/app/src/main/res/layout/anadirmedicamentos.xml
@@ -8,22 +8,37 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_am_titulo"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:textSize="30dp"
-        android:text="Medicamentos"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:text="Añadir medicamento predefinido"
+        android:textColor="@color/black"
         android:layout_weight="1"
-        android:layout_marginTop="10dp"
-        />
+        android:layout_marginVertical="10dp"/>
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_am_medicamentospredefinidos"
         tools:listitem="@layout/medicamentocard"
         android:layout_width="match_parent"
-        android:paddingHorizontal="15dp"
+        android:paddingHorizontal="10dp"
+        android:paddingBottom="10dp"
         android:layout_height="0dp"
-        android:layout_weight="8"/>
+        android:layout_weight="7"/>
+
+    <Button
+        android:id="@+id/bt_am_otromedicamento"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text="Otro medicamento"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:backgroundTint="#FF5117"
+        android:layout_gravity="center"
+        android:layout_marginVertical="10dp"
+        android:layout_weight="0.9"/>
 
 </LinearLayout>
