--- a/app/src/main/res/layout/medicamentocard.xml
+++ b/app/src/main/res/layout/medicamentocard.xml
@@ -3,24 +3,36 @@
     android:background="@drawable/borde"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="130dp"
     android:gravity="center_vertical"
-    android:paddingHorizontal="10dp"
+    android:paddingHorizontal="15dp"
     android:layout_marginBottom="-2dp">
+
     <ImageView
-        android:id="@+id/medi"
-        android:layout_width="wrap_content"
-        android:layout_height="80dp"
+        android:id="@+id/iv_mcard_imagen"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:src="@mipmap/ic_launcher"/>
 
     <TextView
+        android:id="@+id/tv_mcard_nombre"
         android:layout_width="wrap_content"
         android:layout_alignParentEnd="true"
+        android:textColor="@color/black"
         android:textSize="30dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="25dp"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:text="Ibuprofeno" />
+
+    <TextView
+        android:id="@+id/tv_mcard_id"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/tv_mcard_nombre"
+        android:text="id"/>
 
 </RelativeLayout>
