--- a/app/src/main/res/layout/medicamentos.xml
+++ b/app/src/main/res/layout/medicamentos.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -8,21 +7,24 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_m_titulo"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:textSize="30dp"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:textAlignment="center"
         android:text="Medicamentos"
+        android:textColor="@color/black"
         android:layout_weight="1"
-        android:layout_marginTop="10dp"
-         />
+        android:layout_marginTop="10dp"/>
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_m_medicamentos"
         tools:listitem="@layout/medicamentocard"
         android:layout_width="match_parent"
-        android:paddingHorizontal="15dp"
+        android:paddingHorizontal="10dp"
+        android:paddingBottom="10dp"
         android:layout_height="0dp"
         android:layout_weight="8"/>
 
