--- a/app/src/main/res/layout/otromedicamento.xml
+++ b/app/src/main/res/layout/otromedicamento.xml
@@ -1,83 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
-
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_om_titulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Añadir medicamento"
+        android:textColor="@color/black"
         android:layout_gravity="center"
         android:layout_marginTop="80dp"
-
         android:textAlignment="center"
-        android:textSize="30dp"
-        />
+        android:textSize="40sp" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_below="@id/textView"
-        android:text="Nombre del medicamento:"
-        android:layout_marginLeft="30dp"
- />
+    <LinearLayout
+        android:id="@+id/ll_om_ll1"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_below="@id/tv_om_titulo"
+        android:orientation="horizontal"
+        android:layout_marginTop="70dp"
+        android:paddingHorizontal="15dp">
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tv_om_nombre"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:textColor="@color/black"
+            android:text="Nombre:"
+            android:textSize="18sp"
+            android:layout_weight="1"/>
+
+        <EditText
+            android:id="@+id/et_om_nombre"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:scrollbars="vertical"
+            android:textColor="@color/black"
+            android:hint="Nombre del medicamento"
+            android:inputType="text"
+            android:textSize="17sp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_om_ll2"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_below="@id/ll_om_ll1"
+        android:orientation="horizontal"
+        android:layout_marginTop="35dp"
+        android:paddingHorizontal="15dp">
+
+        <TextView
+            android:id="@+id/tv_om_descripcion"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:textColor="@color/black"
+            android:text="Descripción:"
+            android:textSize="18sp"
+            android:layout_weight="1"/>
+
+        <EditText
+            android:id="@+id/et_om_descripcion"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:scrollbars="vertical"
+            android:textColor="@color/black"
+            android:hint="Descripción del medicamento"
+            android:inputType="text"
+            android:textSize="17sp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_om_ll3"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_below="@id/ll_om_ll2"
+        android:orientation="horizontal"
+        android:layout_marginTop="35dp"
+        android:paddingHorizontal="15dp">
+
+        <TextView
+            android:id="@+id/tv_om_periodico"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:textColor="@color/black"
+            android:text="Periódico (24h):"
+            android:textSize="18sp"
+            android:layout_weight="1.2"/>
+
+        <EditText
+            android:id="@+id/et_om_periodico"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:scrollbars="vertical"
+            android:textColor="@color/black"
+            android:hint="ej. 9, 14, 20.30 (para 9am, 2pm y 8:30pm)"
+            android:inputType="text"
+            android:textSize="17sp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_om_ll4"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_below="@id/ll_om_ll3"
+        android:orientation="horizontal"
         android:layout_marginTop="50dp"
+        android:paddingHorizontal="15dp">
 
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textView5"
-        android:text="Nombre del medicamento:"
-        android:layout_marginLeft="30dp"
- />
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="50dp"
+        <Button
+            android:id="@+id/bt_om_cancelar"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:textSize="17sp"
+            android:textColor="@color/white"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:layout_marginHorizontal="15dp"
+            android:text="Cancelar"
+            android:layout_weight="1"
+            style="?android:attr/buttonBarButtonStyle" />
 
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textView6"
-        android:text="Nombre del medicamento:"
-        android:layout_marginLeft="30dp"
- />
+        <Button
+            android:id="@+id/bt_om_añadir"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:textSize="17sp"
+            android:text="Añadir"
+            android:textColor="@color/white"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:layout_marginHorizontal="15dp"
+            android:layout_weight="1"
+            style="?android:attr/buttonBarButtonStyle" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_below="@id/textView7"
+    </LinearLayout>
 
-        android:textSize="10sp"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="80dp"
-        android:text="Cancelar"
-        android:textAlignment="center" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="80dp"
-        android:layout_alignBaseline="@id/button1"
-        android:textSize="10sp"
-
-
-        android:text="Añadir"
-        android:textAlignment="center" />
 
 
 </RelativeLayout>
