--- a/app/src/main/res/layout/medicamentocard.xml
+++ b/app/src/main/res/layout/medicamentocard.xml
@@ -32,7 +32,13 @@
         android:layout_height="0dp"
         android:visibility="invisible"
         android:layout_alignParentEnd="true"
-        android:layout_below="@id/tv_mcard_nombre"
-        android:text="99"/>
+        android:layout_below="@id/tv_mcard_nombre"/>
+    <TextView
+        android:id="@+id/tv_mcard_desc"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/tv_mcard_nombre"/>
 
 </RelativeLayout>
