--- a/app/src/main/res/layout/medicamentocard.xml
+++ b/app/src/main/res/layout/medicamentocard.xml
@@ -40,5 +40,12 @@
         android:visibility="invisible"
         android:layout_alignParentEnd="true"
         android:layout_below="@id/tv_mcard_nombre"/>
+    <TextView
+        android:id="@+id/tv_mcard_imagenUrl"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/tv_mcard_nombre"/>
 
 </RelativeLayout>
