--- a/app/src/main/res/layout/infomedicamento.xml
+++ b/app/src/main/res/layout/infomedicamento.xml
@@ -46,5 +46,15 @@
         android:layout_height="0dp"
         android:text="Periódico (24 h.): 10, 16, 20, 2 ,6, 8.30" />
 
+    <Button
+        android:id="@+id/bt_im_eliminar"
+        android:layout_width="150dp"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:layout_marginVertical="10dp"
+        android:text="Eliminar"
+        android:background="@drawable/boton_eliminar"
+        android:layout_height="0dp"/>
+
 
 </LinearLayout>
